feat: revamp application with Cloud Mist theme and improved UX - Apply Cloud Mist color theme throughout application - Implement new application flow with projects as main landing page - Add ChatGPT-style sliding sidebar with hamburger menu - Update header design with simplified user menu - Move search functionality to page title row - Remove filter dropdowns and project card images - Implement clean project cards with delete functionality - Remove hover effects and status badges for cleaner design - Organize code structure and remove unused elements

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,45 @@
-.DS_Store
+# Dependencies
 node_modules
-.idea
-package-lock.json
+
+# Build outputs
 /build
+/dist
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Config files with secrets
 vite.config.*s.*
+
+# Lock files (optional - remove this line if you want to commit lock files)
+package-lock.json
