--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.0.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.484.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
+    "reactflow": "^11.11.4",
     "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "tailwind-merge": "^3.3.0",
